gem2deb (0.21.2) UNRELEASED; urgency=medium

  [ Pirate Praveen ]
  * use --source https://rails-assets.org for rails-assets-* (Closes: #771212)

  [ Antonio Terceiro ]
  * dh-make-ruby:
    - handle the case where apt-file exits successfully but still does not
      find anything (Closes: #800108)

 -- Pirate Praveen <praveen@debian.org>  Fri, 04 Sep 2015 12:34:00 +0530

gem2deb (0.21.1) unstable; urgency=medium

  * gem2deb-test-runner: fix call to `gem list` after a dependency checking
    failure; avoid exec'ing `gem list` to be able to actually return non-0
    from gem2deb-test-runner.

 -- Antonio Terceiro <terceiro@debian.org>  Thu, 20 Aug 2015 00:11:53 +0200

gem2deb (0.21) unstable; urgency=medium

  * dh_ruby: only ask questions interactively when called by gem2deb
  * dh-make-ruby:
    - use debhelper compatibility level 9 by default
    - don't generate debian/tests/control.ex anymore. So far a few dozen
      packages, I have deleted it every single time.
    - use homepage as default for Source: field in debian/copyright
  * gem2deb-test-runner: call `gem list` when dependency checking fails to
    ease debugging

 -- Antonio Terceiro <terceiro@debian.org>  Tue, 18 Aug 2015 19:57:33 +0200

gem2deb (0.20.2) unstable; urgency=medium

  * gem2deb-test-runner: include version-independent rubygems-integration
    directories in GEM_PATH when checking dependencies.

 -- Antonio Terceiro <terceiro@debian.org>  Thu, 30 Jul 2015 09:24:33 -0300

gem2deb (0.20.1) unstable; urgency=medium

  * gem2deb-test-runner:
    - use the API version number to point to rubygems-integration directories
      inside the build location
    - print banner on dependency resolution step

 -- Antonio Terceiro <terceiro@debian.org>  Fri, 24 Jul 2015 09:09:00 -0300

gem2deb (0.20) unstable; urgency=medium

  * gem2deb-test-runner:
    - when checking dependencies, don't add rubygems-integration paths from
      different Ruby versions to GEM_PATH.