@@ -1,18 +1,8 @@
 #!/usr/bin/make -f
-#export DH_VERBOSE=1
-#
-# Uncomment to ignore all test failures (but the tests will run anyway)
-#export DH_RUBY_IGNORE_TESTS=all
-#
-# Uncomment to ignore some test failures (but the tests will run anyway).
-# Valid values:
-#export DH_RUBY_IGNORE_TESTS=<%= Gem2Deb::SUPPORTED_RUBY_VERSIONS.keys.join(' ') %>
-#
-# If you need to specify the .gemspec (eg there is more than one)
-#export DH_RUBY_GEMSPEC=gem.gemspec
-#
-# Uncomment to check dependencies during build:
-# export GEM2DEB_TEST_RUNNER = --check-dependencies
+
+<% if (@gem_name != 'simplegem') %>
+export GEM2DEB_TEST_RUNNER = --check-dependencies
+<% end %>
 
 %:
 	dh $@ --buildsystem=ruby --with ruby
