@@ -7,6 +7,8 @@ gem2deb (0.21.2) UNRELEASED; urgency=medium
   * dh-make-ruby:
     - handle the case where apt-file exits successfully but still does not
       find anything (Closes: #800108)
+    - cleanup template debian/rules, and make it set
+      `GEM2DEB_TEST_RUNNER = --check-dependencies` by default
 
  -- Pirate Praveen <praveen@debian.org>  Fri, 04 Sep 2015 12:34:00 +0530
 
